some testing with shadcn